--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,15 @@
     <style>
         body {
             background-image: url('https://images.unsplash.com/photo-1508802153073-e549b30d1ac0?q=80&w=1115&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+
+
         }
     </style>
 </head>
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
+            <div class="d-flex justify-content-between align-items-right w-100"> <a class="navbar-brand"
                     href="index.html">
                     <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
                 </a>
@@ -50,7 +52,7 @@
 
 <body>
 
-    <div class="contact-container">
+
         <div id="contact-container">
             <h2 id="contact-header">Contact Us</h2>
             <p>Have questions or want to learn more? Get in touch with us!</p>
@@ -74,7 +76,9 @@
                 <button type="submit" class="btn btn-dark">Send</button>
             </form>
         </div>
-    </div>
+
+
+   
 
 
 
