--- a/challenge.html
+++ b/challenge.html
@@ -5,30 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Challenge</title>
     <link rel="stylesheet" href="./style.css">
-    
 </head>
 <style>
-    header,
-    footer {
-        width: 100%;
-    }
-
-    body {
-        background-image: url('https://images.unsplash.com/photo-1508802153073-e549b30d1ac0?q=80&w=1115&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-
-  
+ 
+    
 
 
-  
 </style>
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-                <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
+                <div class="d-flex justify-content-between align-items-right w-100"> <a class="navbar-brand"
                         href="index.html">
                         <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
                     </a>
@@ -62,9 +50,11 @@
     </nav>
 </header>
 <body>
+    <div id="page-header">
+        <h2>Welcome to Our Market</h2>
+        <p>Explore our wide range of products and services.</p>
+    </div>
     <div id="market"></div>
-
-
     <script src="./partBchallenge.js"></script>
 </body>
 </html>
