--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Navbar  -->
     <nav class="navbar navbar-expand-md navbar-light bg-light">
         <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center w-100"> <a class="navbar-brand"
+            <div class="d-flex justify-content-between align-items-right w-100"> <a class="navbar-brand"
                     href="index.html">
                     <img src="./assets/logo.jpeg" class="navbar-image" alt="Pawsh">
                 </a>
