modified faqs and index

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pawsh Inc. Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
+    <title>Pawsh Inc. Home</title>
 </head>
 <header>
 
@@ -60,8 +63,11 @@
         </section>
 
         <section class="highlights">
-            <h2>Store Highlights & Owner Statement</h2>
-            <p>[Content]</p>
+            <h2>A Note From Our Founder:</h2>
+            <p class="note">At Pawsh&reg, we believe every furry friend deserves a loving home. That's why we pour our hearts into matching the perfect pets with their forever families. And to show our appreciation, we're offering an exclusive deal: refer a friend who adopts, and you'll receive a Pawsh&reg gift basket filled with goodies for your own beloved companion!
+               
+            </p>
+            <p>Offer good until 5/27/25; must be mentioned in referral form to qualify.</p>
         </section>
 
         <section class="adoption">
@@ -76,14 +82,13 @@
 
         <section class="details">
             <h2>Store Hours:</h2>
-            <p>Monday: closed</p>
-            <p>Tuesday: 10:00am - 8:00pm</p>
-            <p>Wednsday: 10:00am - 8:00pm</p>
-            <p>Thursday: 10:00am - 8:00pm</p>
-            <p>Friday: 10:00am - 9:00pm</p>
-            <p>Saturday: 10:00am - 9:00pm</p>
-            <p>Sunday: 12:00pm - 6:00pm</p>
-
+            <p><span>Monday:</span> closed</p>
+            <p><span>Tuesday:</span> 10:00am - 8:00pm</p>
+            <p><span>Wednesday:</span> 10:00am - 8:00pm</p>
+            <p><span>Thursday:</span> 10:00am - 8:00pm</p>
+            <p><span>Friday:</span> 10:00am - 9:00pm</p>
+            <p><span>Saturday:</span> 10:00am - 9:00pm</p>
+            <p><span>Sunday:</span> 12:00pm - 6:00pm</p>
         </section>
 
 
