--- a/FAQs.html
+++ b/FAQs.html
@@ -4,9 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAWSH Inc. FAQs</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <title>PAWSH Inc. FAQs</title>
 </head>
 <header>
     <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -45,111 +48,108 @@
         </nav>
     </nav>
 </header>
+
 <body>
     <div class="page-header">
-        <p>You can never ask enough questions when it comes to giving our animals a loving home! Below we have our most
-            commonly asked questions; for other specific questions, you can contact us directly through our phone,
-            email, or contact form.
+        <p>There are never too many questions when it comes to giving our animals a loving home! Below are our most commonly asked questions; contact us directly for further questions.
         </p>
     </div>
 
- 
-        <div class="faq-container">
-            <h2>Pet Adoption </h2>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>What are the adoption fees?</span>
-                    <span class="arrow">&#9660;</span>
-                </div>
-                <div class="faq-answer">
-                    Adoption fees vary depending on the animal and its age. Please check our website or contact us for
-                    specific fee information.
-                </div>
+    <div class="faq-container">
+        <h2>Pet Adoption </h2>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>What are the adoption fees?</span>
+                <span class="arrow">&#9660;</span>
             </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>What is the adoption process?</span>
-                    <span class="arrow">&#9660;</span>
-                </div>
-                <div class="faq-answer">
-                    The adoption process typically involves filling out an application, meeting the animal, and a home
-                    visit.
-                </div>
+            <div class="faq-answer">
+                Adoption fees vary depending on the animal and its age. Please check our website or contact us for
+                specific fee information.
             </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>What animals are available for adoption?</span>
-                    <span class="arrow">&#9660;</span>
-                </div>
-                <div class="faq-answer">
-                    We have a variety of animals available, including dogs, cats, rabbits, and more. Check our adoption
-                    page for current listings.
-                </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>What is the adoption process?</span>
+                <span class="arrow">&#9660;</span>
             </div>
-            <div class="faq-item">
-                <div class="faq-question">
-                    <span>Can I return an adopted pet?</span>
-                    <span class="arrow">&#9660;</span>
-                </div>
-                <div class="faq-answer">
-                    Yes, we understand that sometimes adoptions don't work out. For this reason we charge a refundable
-                    $500 deposit that covers the fees and paperwork required for handling return cases. If you are
-                    satisfied with your adoption, the deposit is returned to you in 90 days. Please contact us to
-                    discuss the return process.
-                </div>
+            <div class="faq-answer">
+                The adoption process typically involves filling out an application, meeting the animal, and a home
+                visit.
             </div>
-
-            <div class="faq-container">
-                <h2>Photography Services </h2>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <span>What types of photography services do you offer?</span>
-                        <span class="arrow">&#9660;</span>
-                    </div>
-                    <div class="faq-answer">
-                        We offer a wide range of photography services onsite, including custom services on location.
-                        Please
-                        refer to our Services page for more details.
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <span>How do I book a photography session?</span>
-                        <span class="arrow">&#9660;</span>
-                    </div>
-                    <div class="faq-answer">
-                        You can book a session by contacting us through our website, email, or phone. We'll discuss your
-                        needs
-                        and schedule a convenient time.
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <span>What are your pricing packages?</span>
-                        <span class="arrow">&#9660;</span>
-                    </div>
-                    <div class="faq-answer">
-                        Our pricing packages vary depending on the type of photography and the duration of the session.
-                        Please
-                        contact us for a detailed quote.
-                    </div>
-                </div>
-                <div class="faq-item">
-                    <div class="faq-question">
-                        <span>How long does it take to receive the edited photos?</span>
-                        <span class="arrow">&#9660;</span>
-                    </div>
-                    <div class="faq-answer">
-                        The turnaround time for edited photos is typically 1-2 weeks, depending on the volume of photos
-                        and
-                        the
-                        complexity of editing.
-                    </div>
-                </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>What animals are available for adoption?</span>
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="faq-answer">
+                We have a variety of animals available, including dogs, cats, rabbits, and more. Check our adoption
+                page for current listings.
+            </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>Can I return an adopted pet?</span>
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="faq-answer">
+                Yes, we understand that sometimes adoptions don't work out. For this reason we charge a refundable
+                $500 deposit that covers the fees and paperwork required for handling return cases. If you are
+                satisfied with your adoption, the deposit is returned to you in 90 days. Please contact us to
+                discuss the return process.
+            </div>
+        </div>
+        <br>
+        <h2>Photography Services </h2>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>What types of photography services do you offer?</span>
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="faq-answer">
+                We offer a wide range of photography services onsite, including custom services on location.
+                Please
+                refer to our Services page for more details.
+            </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>How do I book a photography session?</span>
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="faq-answer">
+                You can book a session by contacting us through our website, email, or phone. We'll discuss your
+                needs
+                and schedule a convenient time.
+            </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>What are your pricing packages?</span>
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="faq-answer">
+                Our pricing packages vary depending on the type of photography and the duration of the session.
+                Please
+                contact us for a detailed quote.
+            </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">
+                <span>How long does it take to receive the edited photos?</span>
+                <span class="arrow">&#9660;</span>
+            </div>
+            <div class="faq-answer">
+                The turnaround time for edited photos is typically 1-2 weeks, depending on the volume of photos
+                and
+                the
+                complexity of editing.
             </div>
         </div>
 
-   
+    </div>
+
+
 
     <script>
         const faqItems = document.querySelectorAll('.faq-item');
