--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
             </div>
             <h2>Our Most Common</h2>
             <a href="./FAQs.html" class="button">Questions</a>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, nihil suscipit. Fugit, sunt
-                repellendus!</p>
+            <p>Cat got your tongue? Nothing new here...the answer to some of our most frequent questions is only one click of a button!</p>
         </section>
         <section class="services">
             <div class="image-block">
@@ -167,8 +166,7 @@
             </div>
             <h2>Check Out Our</h2>
             <a href="./services.html" class="button">Services</a>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate sunt, ducimus at vitae minima
-                accusantium tenetur delectus voluptatibus deserunt omnis!</p>
+            <p>We pair experienced and aspiring photographers with our fur families to create one of a kind unique experiences and memories; custom packages available upon request.</p>
         </section>
         <section class="contacts">
             <div class="image-block">
@@ -177,7 +175,7 @@
             </div>
             <h2>Need More Help?</h2>
             <a href="./contact.html" class="button">Contact Us</a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio sequi esse quae ex consequuntur.
+            <p>Need a specific question answered? Our dedicated staff are knowledgeable and prompt, and can address any questions not covered on our website. Contact us for more details!
             </p>
         </section>
     </main>
