--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <p>Founded in 2012, Pawsh<sup>&reg</sup> is dedicated to enriching lives by connecting exceptional pets with
             loving families. Leveraging our extensive background in veterinary medicine and purebred judging, we
             maintain the highest standards for the health, temperament, and overall well-being of every animal we
-            represent. Unlike traditional pet stores or online marketplaces, Pawsh<sup>&reg</sup> Pawsh<sup>&reg</sup>
+            represent. Unlike traditional pet stores or online marketplaces, Pawsh<sup>&reg</sup> 
             meticulously selects our pets through partnerships with reputable local and regional breeders, as well as
             carefully assessing and training animals from families and shelters in transition. This rigorous process,
             combined with our commitment to transparency and client education, ensures a trustworthy and satisfying
